# pyglow

./: .gitignore  CMakeCache.txt  CMakeLists.py  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  _CMakeLists.txt  bla.txt  cmake_install.cmake  meson.build  pyproject.toml  reencode_files.py  remove_non_ascii.py  requirements.txt  setup.py
_skbuild/linux-x86_64-3.10/cmake-build/: CMakeCache.txt  CMakeSpec.json  Makefile  alf.mod  apexcord.mod  cmake_install.cmake  gd2qdc.mod  install_manifest.txt
_skbuild/linux-x86_64-3.10/cmake-install/src/pyglow/: iri.py
_skbuild/linux-x86_64-3.10/setuptools/lib.linux-x86_64-cpython-310/pyglow/: pyglow.py
examples/: example_iri12_iri16.py
pyglow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyglow/: generate_kpap.py  get_kpap.py  hwm.py  igrf.py  iri.py  msis.py  pyglow.py
src/pyglow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyglow/models/: Makefile  get_models.py
src/pyglow/models/dl_models/hwm07/: Makefile  apexcord.f90  hwm07e.f90  hwm07e_modified.f90  hwm07py-f2pywrappers2.f90  hwm07pymodule.c  out1
src/pyglow/models/dl_models/hwm93/: out1
src/pyglow/models/dl_models/igrf11/: out1  out2
src/pyglow/models/dl_models/igrf12/: out1
src/pyglow/models/dl_models/iri12/: #iri12pymodule_sig.c#  iri12pymodule.c  iri12pymodule_sig.c  irifun.for  out1  sig_file_patched.pyfmodule.c  sig_file_pathced.pyf-f2pywrappers.f  sig_file_pathced.pyfmodule.c
src/pyglow/models/dl_models/iri16/: iriflip_modified.for  irifun.for  out1
src/pyglow/models/dl_models/iri20/: 00readme.txt  Makefile  Makefile~  igrf.for  iridreg.for  iridreg.patch  iridreg_modified.for  iriflip.for  iriflip_modified.for  irifun.for  irisub.for  iritest.for  out1
src/pyglow/models/dl_models/msis/: out1
