[build-system]
requires = [
    "scikit-build-core",
    "numpy>=1.21",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyglow"
version = "0.1.0"
description = "Upper atmosphere climatological models in Python"
authors = [
    { name="Timothy M. Duly", email="timduly4@gmail.com" }
]
dependencies = ["numpy>=1.21"]

[tool.scikit-build]
ninja.version = ">=1.10"
cmake.version = ">=3.17.2"
