[build-system]
requires = [
    "scikit-build-core",
    "numpy",
    "chardet",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyglow"
version = "0.1.0"
description = "Upper atmosphere climatological models in Python"
authors = [
    { name="Timothy M. Duly", email="timduly4@gmail.com" }
]
dependencies = ["numpy","chardet"]

[tool.scikit-build]
cmake.version = "CMakeLists.txt"